--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: .
       args:
         WORDPRESS_DB_PASSWORD: pass
+        PHP_IMAGE_TAG: $PHP_IMAGE_TAG
+        WORDPRESS_VERSION: $WORDPRESS_VERSION
     ports:
       - 8080:80
     depends_on:
