--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '2.1'
 
 services:
-
   wordpress:
     build: 
       context: .
@@ -9,13 +8,17 @@ services:
         WORDPRESS_DB_PASSWORD: pass
         PHP_IMAGE_TAG: $PHP_IMAGE_TAG
         WORDPRESS_VERSION: $WORDPRESS_VERSION
-    ports:
-      - 8080:80
     depends_on:
       mysql:
         condition: service_healthy
 
   mysql:
-    image: healthcheck/mariadb
+    image: mariadb:latest
+    restart: always
+    healthcheck:
+      test: "/usr/bin/mysql --user=root --password=pass --execute \"SHOW DATABASES;\""
+      interval: 3s
+      timeout: 1s
+      retries: 5
     environment:
       MYSQL_ROOT_PASSWORD: pass
